@@ -19,8 +19,7 @@ setup(name='z3c.formwidget.query',
       include_package_data=True,
       package_dir = {'':'src'},
       namespace_packages=['z3c', 'z3c.formwidget'],
-      extras_require = dict(test=['zope.app.testing',
-                                  'zope.testing',
+      extras_require = dict(test=['zope.testing',
                                   'z3c.form [test]'
                                   ]),
       install_requires = ['setuptools',
